ejb modules assembly

--- a/bai/discount/ejb/pom.xml
+++ b/bai/discount/ejb/pom.xml
@@ -16,6 +16,10 @@
   <name>MBSA::BAI::Discount::EJB</name>
   <description/>
 
+  <build>
+    <finalName>100mdiscount-ejb</finalName>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.server</groupId>
