--- a/bai/mfref/ejb/pom.xml
+++ b/bai/mfref/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::MFReference::EJB</name>
   <description/>
+
+  <build>
+    <finalName>100mmfreference-ejb</finalName>
+  </build>
 </project>
