--- a/bai/overall/ejb/pom.xml
+++ b/bai/overall/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::Overall::EJB</name>
   <description/>
+
+  <build>
+    <finalName>100moverall-ejb</finalName>
+  </build>
 </project>
