--- a/bai/planning/ejb/pom.xml
+++ b/bai/planning/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::Planning::EJB</name>
   <description/>
+
+  <build>
+    <finalName>120mplanning-ejb</finalName>
+  </build>
 </project>
