--- a/bai/salary/ejb/pom.xml
+++ b/bai/salary/ejb/pom.xml
@@ -16,4 +16,7 @@
   <name>MBSA::BAI::Salary::EJB</name>
   <description/>
 
+  <build>
+    <finalName>100msalary-ejb</finalName>
+  </build>
 </project>
