--- a/bai/scheduler/ejb/pom.xml
+++ b/bai/scheduler/ejb/pom.xml
@@ -17,6 +17,8 @@
   <description/>
 
   <build>
+    <finalName>020mscheduler-ejb</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
