--- a/bai/crm/ejb/pom.xml
+++ b/bai/crm/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::CRM::EJB</name>
   <description/>
+
+  <build>
+    <finalName>100mcrm-ejb</finalName>
+  </build>
 </project>
