--- a/bai/manufacture/ejb/pom.xml
+++ b/bai/manufacture/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::Manufacture::EJB</name>
   <description/>
+
+  <build>
+    <finalName>100mmanufacture-ejb</finalName>
+  </build>
 </project>
