--- a/bai/qc/ejb/pom.xml
+++ b/bai/qc/ejb/pom.xml
@@ -15,4 +15,8 @@
 
   <name>MBSA::BAI::QualityControl::EJB</name>
   <description/>
+
+  <build>
+    <finalName>100mqualitycontrol-ejb</finalName>
+  </build>
 </project>
