--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,36 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.4</version>
+          <configuration>
+            <classifier>sources</classifier>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <addDefaultImplementationEntries>true
+                </addDefaultImplementationEntries>
+              </manifest>
+              <manifestSections>
+                <manifestSection>
+                  <name>SCM</name>
+                  <manifestEntries>
+                    <Url>${repository.url}</Url>
+                    <Branch>${scmBranch}</Branch>
+                    <Build-Version>${project.version}</Build-Version>
+                    <Source-Revision>${buildNumber}</Source-Revision>
+                  </manifestEntries>
+                </manifestSection>
+                <manifestSection>
+                  <name>CI</name>
+                  <manifestEntries>
+                    <System>${project.ciManagement.system}</System>
+                    <Url>${project.ciManagement.url}</Url>
+                    <Build-Time>${timestamp}</Build-Time>
+                  </manifestEntries>
+                </manifestSection>
+              </manifestSections>
+              <addMavenDescriptor>${add.maven.descriptor}</addMavenDescriptor>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -450,6 +480,13 @@
       </dependency>
       <dependency>
         <groupId>com.mg.modules.data</groupId>
+        <artifactId>model</artifactId>
+        <version>${project.version}</version>
+        <classifier>interface</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.modules.data</groupId>
         <artifactId>service</artifactId>
         <version>${project.version}</version>
         <type>jboss-har</type>
@@ -498,6 +535,13 @@
         <type>jar</type>
       </dependency>
       <dependency>
+        <groupId>com.mg.server</groupId>
+        <artifactId>exchange</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
         <groupId>com.mg.server.security</groupId>
         <artifactId>security</artifactId>
         <version>${project.version}</version>
@@ -508,6 +552,13 @@
         <artifactId>security</artifactId>
         <version>${project.version}</version>
         <classifier>service</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.server.security</groupId>
+        <artifactId>security</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -523,6 +574,13 @@
         <type>jar</type>
       </dependency>
       <dependency>
+        <groupId>com.mg.server</groupId>
+        <artifactId>hr</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
         <groupId>com.mg.server.report</groupId>
         <artifactId>report</artifactId>
         <version>${project.version}</version>
@@ -533,6 +591,13 @@
         <artifactId>report</artifactId>
         <version>${project.version}</version>
         <classifier>service</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.server.report</groupId>
+        <artifactId>report</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -570,6 +635,13 @@
         <artifactId>docflow</artifactId>
         <version>${project.version}</version>
         <classifier>service</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.server.docflow</groupId>
+        <artifactId>docflow</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -659,6 +731,13 @@
         <type>jar</type>
       </dependency>
       <dependency>
+        <groupId>com.mg.bai</groupId>
+        <artifactId>account</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
         <groupId>com.mg.bai.discount</groupId>
         <artifactId>ejb</artifactId>
         <version>${project.version}</version>
@@ -678,8 +757,22 @@
       </dependency>
       <dependency>
         <groupId>com.mg.bai</groupId>
+        <artifactId>contract</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai</groupId>
         <artifactId>warehouse</artifactId>
         <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai</groupId>
+        <artifactId>warehouse</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -710,6 +803,13 @@
         <groupId>com.mg.bai</groupId>
         <artifactId>payalloc</artifactId>
         <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai</groupId>
+        <artifactId>payalloc</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -791,6 +891,13 @@
         <type>jar</type>
       </dependency>
       <dependency>
+        <groupId>com.mg.bai</groupId>
+        <artifactId>finance</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
+        <type>jar</type>
+      </dependency>
+      <dependency>
         <groupId>com.mg.bai.planning</groupId>
         <artifactId>ejb</artifactId>
         <version>${project.version}</version>
@@ -806,6 +913,13 @@
         <groupId>com.mg.bai</groupId>
         <artifactId>table</artifactId>
         <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai</groupId>
+        <artifactId>table</artifactId>
+        <version>${project.version}</version>
+        <classifier>ejb</classifier>
         <type>jar</type>
       </dependency>
       <dependency>
@@ -857,8 +971,20 @@
         <type>war</type>
       </dependency>
       <dependency>
-        <groupId>com.mg.bai</groupId>
-        <artifactId>workbench</artifactId>
+        <groupId>com.mg.bai.help</groupId>
+        <artifactId>app</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai.help</groupId>
+        <artifactId>service</artifactId>
+        <version>${project.version}</version>
+        <type>jboss-sar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai.wb</groupId>
+        <artifactId>service</artifactId>
         <version>${project.version}</version>
         <type>jboss-sar</type>
       </dependency>
