--- a/server/documentcore/pom.xml
+++ b/server/documentcore/pom.xml
@@ -16,6 +16,10 @@
   <name>MBSA::Server::DocumentCore</name>
   <description/>
 
+  <build>
+    <finalName>mdocumentcore-lib</finalName>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.server.reference</groupId>
