--- a/bai/account/pom.xml
+++ b/bai/account/pom.xml
@@ -16,6 +16,31 @@
   <name>MBSA::BAI::Account</name>
   <description/>
 
+  <build>
+    <finalName>100maccount-ejb</finalName>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>ejb-jar</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>ejb</classifier>
+              <excludes>
+                <exclude>**/ui/**</exclude>
+              </excludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.modules.core</groupId>
