--- a/bai/crm/ui/pom.xml
+++ b/bai/crm/ui/pom.xml
@@ -16,6 +16,10 @@
   <name>MBSA::BAI::CRM::UI</name>
   <description/>
 
+  <build>
+    <finalName>100mcrm-ui</finalName>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.bai.crm</groupId>
