--- a/bai/lbschedule/ui/pom.xml
+++ b/bai/lbschedule/ui/pom.xml
@@ -16,6 +16,10 @@
   <name>MBSA::BAI::LBSchedule::UI</name>
   <description/>
 
+  <build>
+    <finalName>100mlbschedule-ui</finalName>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.bai.lbschedule</groupId>
