--- a/bai/retail/ui/pom.xml
+++ b/bai/retail/ui/pom.xml
@@ -16,6 +16,10 @@
   <name>MBSA::BAI::Retail::UI</name>
   <description/>
 
+  <build>
+    <finalName>100mretail-ui</finalName>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.bai.retail</groupId>
