--- a/distribution/assembly/pom.xml
+++ b/distribution/assembly/pom.xml
@@ -19,6 +19,7 @@
 
   <build>
     <finalName>MBSA-${project.version}</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -32,87 +33,79 @@
       </plugin>
     </plugins>
   </build>
+
   <dependencies>
     <dependency>
       <groupId>com.mg.modules</groupId>
       <artifactId>framework</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.data</groupId>
       <artifactId>model</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.data</groupId>
       <artifactId>model</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.modules.data</groupId>
+      <artifactId>model</artifactId>
+      <classifier>interface</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.data</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-har</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.core</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.core</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server</groupId>
       <artifactId>exchange</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.server</groupId>
+      <artifactId>exchange</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.server.security</groupId>
       <artifactId>security</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.security</groupId>
       <artifactId>security</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.server.security</groupId>
+      <artifactId>security</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.server.security</groupId>
@@ -123,346 +116,296 @@
     <dependency>
       <groupId>com.mg.server</groupId>
       <artifactId>hr</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.server</groupId>
+      <artifactId>hr</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.server.report</groupId>
       <artifactId>report</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.report</groupId>
       <artifactId>report</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.server.report</groupId>
+      <artifactId>report</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.server.report</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.reference</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.reference</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server</groupId>
       <artifactId>documentcore</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.docflow</groupId>
       <artifactId>docflow</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.docflow</groupId>
       <artifactId>docflow</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.server.docflow</groupId>
+      <artifactId>docflow</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.server.docflow</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.document</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.document</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.bpm</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.bpm</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.bpm</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.bpm</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
       <classifier>service</classifier>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
       <artifactId>service</artifactId>
-      <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.qc</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.qc</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>account</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>account</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.discount</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.discount</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>contract</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>contract</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>warehouse</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>warehouse</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.mfref</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.mfref</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.manufacture</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.manufacture</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>payalloc</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>payalloc</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.payctl</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.payctl</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.retail</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.retail</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.factura</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.factura</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.lbschedule</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.lbschedule</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.persref</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.persref</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.overall</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.overall</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>finance</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>finance</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.planning</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.planning</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai</groupId>
       <artifactId>table</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai</groupId>
+      <artifactId>table</artifactId>
+      <classifier>ejb</classifier>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.salary</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.salary</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.setlmnt</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.setlmnt</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.crm</groupId>
       <artifactId>ejb</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.crm</groupId>
       <artifactId>ui</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.rptvwr</groupId>
       <artifactId>engine</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.rptvwr</groupId>
+      <artifactId>app</artifactId>
+      <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai.help</groupId>
       <artifactId>app</artifactId>
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>com.mg.bai</groupId>
-      <artifactId>workbench</artifactId>
+      <groupId>com.mg.bai.help</groupId>
+      <artifactId>service</artifactId>
+      <version>${project.version}</version>
+      <type>jboss-sar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.mg.bai.wb</groupId>
+      <artifactId>service</artifactId>
       <version>${project.version}</version>
       <type>jboss-sar</type>
     </dependency>
@@ -470,7 +413,6 @@
     <dependency>
       <groupId>com.mg</groupId>
       <artifactId>framework-aux</artifactId>
-      <version>1.0</version>
     </dependency>
   </dependencies>
 </project>
